--- a/tomcat.yml
+++ b/tomcat.yml
@@ -4,6 +4,9 @@
   become_method: sudo
   vars:
     tomcat_port: 8080
+    tomcat_users:
+      - { rolename: manager-gui, username: tomcatmgr, password: admin123 }
+      - { rolename: manager-script, username: deploy, password: deploy123 }
 
   tasks:
     
@@ -37,7 +40,7 @@
     notify: restart tomcat
 
   - name: Configure Tomcat users
-    template: src=templates/tomcat-users.xml dest=/opt/apache-tomcat-9.0.11/conf
+    template: src=templates/tomcat-users.xml.j2 dest=/opt/apache-tomcat-9.0.11/conf/tomcat-users.xml
     notify: restart tomcat
 
   - name: Context configure
